# portfolio-rs

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
frontend/: Cargo.toml
frontend/src/: lib.rs
src/: main.rs  routes.rs
src/templates/: about.rs  home.rs  layout.rs  mod.rs  project.rs
static/css/: style.css
static/js/: main.js
