[package]
name = "portfolio-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Event",
  "EventTarget",
  "Performance",
  "CssStyleDeclaration",
  "DomTokenList",
]
